# baya

./: CMakeLists.txt  baya.cpp  baya.ixx  main.cpp  maya.cpp  maya.h  notes.txt  test.ixx  window.ixx
imgui/: CMakeLists.txt
shaders/: CMakeLists.txt  f_simple.sc  f_simple_edge.sc  v_simple.sc  v_simple_edge.sc  varying.def.sc
src/: CMakeLists.txt  baya.ixx  camera.ixx  gui.ixx  node.ixx  renderable.ixx  scene.ixx  shader.ixx  vertex.ixx  window.ixx
